--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">My Name Is<br />
-									JAMES GROOMS</a></h2>
+									<h2><a href="#">My name is<br />
+									James Grooms</a></h2>
 									<p>Computer information systems undergrad student with an interest in insights gained from data science.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a>
