update credit card jupyter notebook link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<a href="#" class="image fit"><img src="images/cards.jpg" alt="" /></a>
 									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See code</a></li>
+										<li><a href="https://github.com/JamesGrooms/credit_card_churn/blob/main/credit_card_churn.ipynb" class="button">See Jupyter Notebook</a></li>
 									</ul>
 								</article>
 								<article>
@@ -78,7 +78,7 @@
 									<a href="#" class="image fit"><img src="images/health.jpg" alt="" /></a>
 									<p>Taking a data-driven look at which health factors correlate with and predict heart disease.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See code</a></li>
+										<li><a href="#" class="button">See Jupyter Notebook</a></li>
 									</ul>
 								</article>
 							</section>
