--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										Heart Disease</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/health.jpg" alt="" /></a>
-									<p>Taking a data-driven look at which health factors correlate with and predict heart disease.</p>
+									<p>Taking a data-driven look at which health factors correlate with and predict heart disease.</p><br />
 									<ul class="actions special">
 										<li><a href="#" class="button">See Jupyter Notebook</a></li>
 									</ul>
