--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 1:<br />
+										<h2><a href="credit_card.html">Project 1:<br />
 										Credit Card Churn</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/cards.jpg" alt="" /></a>
+									<a href="credit_card.html" class="image fit"><img src="images/cards.jpg" alt="" /></a>
 									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JamesGrooms/credit_card_churn/blob/main/credit_card_churn.ipynb" class="button">See Jupyter Notebook</a></li>
