--- a/credit_card.html
+++ b/credit_card.html
@@ -22,7 +22,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<!--<li><a href="index.html">This is Massively</a></li>-->
-							<li class="active"><a href="generic.html">Project #1: Credit Card Churn</a></li>
+							<li class="active"><a href="credit_card.html">Project #1: Credit Card Churn</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
