--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									JAMES GROOMS</a></h2>-->
 									<h2>My Name Is<br />
 									JAMES GROOMS</h2>
-									<p>Computer information systems undergrad student with an interest in insights gained from data science.</p>
+									<p>Computer information systems undergrad student with an interest for insights gained from data science.</p>
 								</header>
 								<!--<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a> if i want a clickable main pic -->
 								<img class="image main" src="images/code.jpg" alt="" />
@@ -68,7 +68,7 @@
 										Credit Card Churn</a></h2>
 									</header>
 									<a href="credit_card.html" class="image fit"><img src="images/cards.jpg" alt="" /></a>
-									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
+									<p>The ability for companies to be able to identify which customers are at-risk to churn is important from a retention and cost-savings perspective.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JamesGrooms/credit_card_churn/blob/main/credit_card_churn.ipynb" class="button">See Jupyter Notebook</a></li>
 									</ul>
