update index for zoo

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									JAMES GROOMS</a></h2>-->
 									<h2>My name is<br />
 									James Grooms</h2>
-									<p>Computer information systems undergrad student with an interest in insights gained from data science.</p>
+									<p>Computer information systems undergrad student with an interest in insights gained from data science and predictive analytics.</p>
 								</header>
 								<!--<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a> if i want a clickable main pic -->
 								<img class="image main" src="images/code.jpg" alt="" />
@@ -66,6 +66,7 @@
 									<header>
 										<h2><a href="credit_card.html">Project 1:<br />
 										Credit Card Churn</a></h2>
+										<h4>EDA and Naive Bayes Classification</h4>
 									</header>
 									<a href="credit_card.html" class="image fit"><img src="images/cards.jpg" alt="" /></a>
 									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
@@ -76,7 +77,20 @@
 								<article>
 									<header>
 										<h2><a href="heart.html">Project 2:<br />
+										Zoo Animal Types</a></h2>
+										<h4>Random Forest Classification<br></h4>
+									</header>
+									<a href="zoo.html" class="image fit"><img src="images/zoo.jpg" alt="" /></a>
+									<p>Predicting animal types based on several features.</p><br />
+									<ul class="actions special">
+										<li><a href="https://github.com/JamesGrooms/animal_type_prediction/blob/main/Zoo%20animal%20prediction.ipynb" class="button">See Jupyter Notebook</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="heart.html">Project 3:<br />
 										Heart Disease</a></h2>
+										<h4>EDA and Naive Bayes Classification</h4>
 									</header>
 									<a href="heart.html" class="image fit"><img src="images/health.jpg" alt="" /></a>
 									<p>Taking a data-driven look at which health factors correlate with and predict heart disease.</p><br />
