update zoo link in index

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="heart.html">Project 2:<br />
+										<h2><a href="zoo.html">Project 2:<br />
 										Zoo Animal Types</a></h2>
 										<h4>Random Forest Classification<br></h4>
 									</header>
