add dog.html link

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="credit_card.html">Project 1:<br />
-										Credit Card Churn</a></h2>
-										<h4>EDA and Naive Bayes Classification</h4>
+										<h2><a href="dog.html">Project 1:<br />
+										Dog Image Classificaton</a></h2>
+										<h4>Deep Neutral Network</h4>
 									</header>
-									<a href="credit_card.html" class="image fit"><img src="images/cards.jpg" alt="" /></a>
-									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
+									<a href="dog.html" class="image fit"><img src="images/doggo.jpg" alt="" /></a>
+									<p>Preprocess and extract features from dog images using three pre-trained CNN models. Then use a DNN to figure out patterns in the features extracted from the data.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/JamesGrooms/credit_card_churn/blob/main/credit_card_churn.ipynb" class="button">See Jupyter Notebook</a></li>
+										<li><a href="https://github.com/JamesGrooms/dog_image_classification/blob/main/dog_breed_image_classification.ipynb" class="button">See Jupyter Notebook</a></li>
 									</ul>
 								</article>
 								<article>
@@ -96,6 +96,18 @@
 									<p>Taking a data-driven look at which health factors correlate with and predict heart disease.</p><br />
 									<ul class="actions special">
 										<li><a href="https://github.com/JamesGrooms/heart_disease/blob/main/Adv_Heart.ipynb" class="button">See Jupyter Notebook</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="credit_card.html">Project 4:<br />
+										Credit Card Churn</a></h2>
+										<h4>EDA and Naive Bayes Classification</h4>
+									</header>
+									<a href="credit_card.html" class="image fit"><img src="images/cards.jpg" alt="" /></a>
+									<p>The ability for companies to be able to identify which costumers are at-risk to churn is important from a retention and cost-savings perspective.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/JamesGrooms/credit_card_churn/blob/main/credit_card_churn.ipynb" class="button">See Jupyter Notebook</a></li>
 									</ul>
 								</article>
 							</section>
