--- a/dog.html
+++ b/dog.html
@@ -45,7 +45,7 @@
 									<p>Deep Neutral Network</p>
 								</header>
 
-								<div class="image main"><img src="images/dog1.png" alt="" /></div>
+								<div class="image main"><img src="images/dog1.PNG" alt="" /></div>
 								<div class="image main"><img src="images/dog2.png" alt="" /></div>
 								<div class="image main"><img src="images/dog3.png" alt="" /></div>
 								<div class="image main"><img src="images/dog4.png" alt="" /></div>
