--- a/dog.html
+++ b/dog.html
@@ -46,21 +46,21 @@
 								</header>
 
 								<div class="image main"><img src="images/dog1.PNG" alt="" /></div>
-								<div class="image main"><img src="images/dog2.png" alt="" /></div>
-								<div class="image main"><img src="images/dog3.png" alt="" /></div>
-								<div class="image main"><img src="images/dog4.png" alt="" /></div>
-								<div class="image main"><img src="images/dog5.png" alt="" /></div>
-								<div class="image main"><img src="images/dog6.png" alt="" /></div>
-								<div class="image main"><img src="images/dog7.png" alt="" /></div>
-								<div class="image main"><img src="images/dog8.png" alt="" /></div>
-								<div class="image main"><img src="images/dog9.png" alt="" /></div>
-								<div class="image main"><img src="images/dog10.png" alt="" /></div>
-								<div class="image main"><img src="images/dog11.png" alt="" /></div>
-								<div class="image main"><img src="images/dog12.png" alt="" /></div>
-								<div class="image main"><img src="images/dog13.png" alt="" /></div>
-								<div class="image main"><img src="images/dog14.png" alt="" /></div>
-								<div class="image main"><img src="images/dog15.png" alt="" /></div>
-								<div class="image main"><img src="images/dog16.png" alt="" /></div>
+								<div class="image main"><img src="images/dog2.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog3.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog4.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog5.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog6.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog7.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog8.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog9.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog10.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog11.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog12.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog13.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog14.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog15.PNG" alt="" /></div>
+								<div class="image main"><img src="images/dog16.PNG" alt="" /></div>
 								<p><a href="https://www.kaggle.com/c/dog-breed-identification/data" class="logo">Here's the dataset from kaggle</a></p>
 								<ul class="actions special">
 										<li><a href="https://github.com/JamesGrooms/dog_image_classification/blob/main/dog_breed_image_classification.ipynb" class="button">See Jupyter Notebook</a></li>
