--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									JAMES GROOMS</a></h2>-->
 									<h2>My name is<br />
 									James Grooms</h2>
-									<p>Computer information systems undergrad student with an interest in insights gained from data science and predictive analytics.</p>
+									<p>Data Science undergrad student with an interest in insights gained from data science and predictive analytics.</p>
 								</header>
 								<!--<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a> if i want a clickable main pic -->
 								<img class="image main" src="images/code.jpg" alt="" />
@@ -81,7 +81,7 @@
 										<h4>Random Forest Classification<br></h4>
 									</header>
 									<a href="zoo.html" class="image fit"><img src="images/zoo.jpg" alt="" /></a>
-									<p>Predicting animal types based on several features.</p><br />
+									<p>Predicting animal types based on several features.</p><br /><br />
 									<ul class="actions special">
 										<li><a href="https://github.com/JamesGrooms/animal_type_prediction/blob/main/Zoo%20animal%20prediction.ipynb" class="button">See Jupyter Notebook</a></li>
 									</ul>
