--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									JAMES GROOMS</a></h2>-->
 									<h2>My name is<br />
 									James Grooms</h2>
-									<p>Data Science undergrad student with an interest in insights gained from data science and predictive analytics.</p>
+									<p>Data Science undergrad student with an interest in insights gained from exploratory data analysis and machine learning applications.</p>
 								</header>
 								<!--<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a> if i want a clickable main pic -->
 								<img class="image main" src="images/code.jpg" alt="" />
